# mnist-ncnn

./: .gitmodules  CMakeLists.txt  README.md  build.sh
examples/: mnist.cpp  mnist.hpp
src/: CMakeLists.txt
src/mnist/: mnist_engine.cpp  mnist_engine.hpp
